[gd_scene load_steps=8 format=3 uid="uid://ctyrf5a6c44br"]

[ext_resource type="Script" path="res://Scene/Login_Scene/login_input.gd" id="1_g8sjb"]
[ext_resource type="Shader" path="res://Scene/Setting/setting.gdshader" id="1_ox00p"]
[ext_resource type="Texture2D" uid="uid://rlc4pvl0utj1" path="res://Assets/login & register board/login board.png" id="2_2mnne"]
[ext_resource type="Texture2D" uid="uid://davg44482jdip" path="res://Assets/Button/Login/preview.png" id="3_6nfkt"]
[ext_resource type="Texture2D" uid="uid://yllab5uay6wd" path="res://Assets/login & register board/exit base.png" id="5_m3244"]
[ext_resource type="Texture2D" uid="uid://jrxjpvv0qjaf" path="res://Assets/login & register board/icon.png" id="6_qowr0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qaitb"]
shader = ExtResource("1_ox00p")
shader_parameter/amount = 1.0

[node name="Login_Input" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g8sjb")

[node name="Blur_Background" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_qaitb")
layout_mode = 0
offset_left = -5.0
offset_top = -15.0
offset_right = 1935.0
offset_bottom = 1076.0

[node name="Register_Menu" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 548.0
offset_top = 68.0
offset_right = 1378.0
offset_bottom = 997.0

[node name="Register_Background" type="TextureRect" parent="Register_Menu"]
layout_mode = 2
texture = ExtResource("2_2mnne")
expand_mode = 1

[node name="Login" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 786.0
offset_top = 780.0
offset_right = 1658.0
offset_bottom = 1116.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("3_6nfkt")
texture_pressed = ExtResource("3_6nfkt")
texture_hover = ExtResource("3_6nfkt")
stretch_mode = 0

[node name="Password" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 642.0
offset_top = 587.0
offset_right = 1286.0
offset_bottom = 669.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
placeholder_text = "Password"
secret = true

[node name="Username" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 644.0
offset_top = 381.0
offset_right = 1287.0
offset_bottom = 474.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
placeholder_text = "Email"

[node name="MarginContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1317.0
offset_top = 115.0
offset_right = 1394.0
offset_bottom = 177.0

[node name="ExitBase" type="TextureButton" parent="MarginContainer"]
layout_mode = 0
offset_left = -3.0
offset_top = -13.0
offset_right = 197.0
offset_bottom = 199.0
scale = Vector2(0.38, 0.287736)
texture_normal = ExtResource("5_m3244")
stretch_mode = 0

[node name="Exit" type="TextureButton" parent="MarginContainer/ExitBase"]
layout_mode = 0
offset_left = 28.9475
offset_top = 31.2787
offset_right = 180.948
offset_bottom = 180.279
texture_normal = ExtResource("6_qowr0")
stretch_mode = 0

[node name="Error" type="Label" parent="."]
layout_mode = 0
offset_left = 818.0
offset_top = 222.0
offset_right = 1130.0
offset_bottom = 301.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="MarginContainer/ExitBase/Exit" to="." method="_on_exit_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
